--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Plot that PokeMon!</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Plot that PokeMon!</h1>
+      <p>Select two PokeMon, and we'll tell you where they intersect!</p>
+    </header>
+    <main>
+      <div id="pokemon-container"></div>
+      <div id="map-container"></div>
+    </main>
+  </body>
 </html>
