added google maps. modified click events to use attack and defense for lat and long.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
           <ul class="poke-list" id="poke-long"></ul>
         </div>
       </div>
-      <div id="map-container"></div>
+      <div id="map"></div>
     </main>
     <script src="assets/script.js"></script>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAk04dfpy-GNnejt-DeEu83qqut2zcI7eE&callback=initMap"
+    ></script>
   </body>
 </html>
